ssh-import-id (3.22) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 27 Feb 2014 09:39:24 -0600

ssh-import-id (3.21-0ubuntu1) trusty; urgency=low

  * bin/ssh-import-id: LP: #1285295
    - re-authorizing existing keys should exit 0
    - update logging

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 27 Feb 2014 09:39:22 -0600

ssh-import-id (3.20-0ubuntu1) trusty; urgency=low

  * bin/ssh-import-id: LP: #1274426
    - ensure that we exit zero if any of the id's that we try to import
      affect 0 keys (ie, if we fail to do something we were asked to do)
    - however, we should continue to try to succeed, as much as possible,
      even if one of the earlier accounts failed

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 30 Jan 2014 09:22:45 +0000

ssh-import-id (3.19-0ubuntu1) saucy; urgency=low

  * debian/control:
    - drop the breaks/replaces ssh-import;  this package hasn't existed for
      eons; we should never realistically encounter it any more
    - add vcs-browser

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 16 Aug 2013 15:33:24 -0500

ssh-import-id (3.18-0ubuntu1) saucy; urgency=low

  * attic/ssh-import-id, attic/ssh-import-id.py, === removed directory
    attic:
    - fully deprecate the old versions of these scripts; no longer necessary
  * debian/control:
    - bump standards
    - merge some minor changes from Andrew Starr-Bochicchio
    - add Andrew Starr-Bochicchio <asb@debian.org> as an uploader
    - adjust formatting and indentation to match Andrew's
  * debian/copyright:
    - update debian copyright file format
  * debian/postinst:
    - add inline comments for Debian
  * debian/watch:
    - add a debian watch file

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 16 Aug 2013 15:17:16 -0500

ssh-import-id (3.17-0ubuntu1) saucy; urgency=low

  * Another no-change release for Ubuntu

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 29 Apr 2013 09:49:51 -0500
