@@ -3,11 +3,12 @@ Section: misc
 Priority: extra
 Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
 Uploaders: Andrew Starr-Bochicchio <asb@debian.org>
-Build-Depends: debhelper (>= 7.0.50~),
-               pep8,
-               python-all (>= 2.6),
-               python-setuptools
-Standards-Version: 3.9.4
+Build-Depends: debhelper (>= 8),
+               python3-pep8,
+               python3-all,
+               python3-setuptools
+Standards-Version: 3.9.5
+X-Python3-Version: >= 3.2
 Homepage: http://launchpad.net/ssh-import-id
 Vcs-Browser: http://bazaar.launchpad.net/~ssh-import-id/ssh-import-id/trunk/files
 Vcs-Bzr: https://code.launchpad.net/~ssh-import-id/ssh-import-id/trunk
@@ -16,10 +17,10 @@ Package: ssh-import-id
 Architecture: all
 Depends: ca-certificates,
          openssh-client,
-         python-requests (>= 1.1.0),
+         python3-requests (>= 1.1.0),
          wget,
          ${misc:Depends},
-         ${python:Depends}
+         ${python3:Depends}
 Recommends: openssh-server
 Description: securely retrieve an SSH public key and install it locally
  This utility will securely contact a public keyserver (Launchpad.net by
