@@ -1,13 +1,10 @@
 #!/usr/bin/make -f
 
-# Lucid does not have dh_python2, but we would like to be able to use this
-# rules file to build on lucid as well. Thus the branching logic.
-WITH_PYTHON2 = $(shell test -f /usr/bin/dh_python2 && echo "--with python2")
-
 override_dh_auto_build:
 	# Check syntax
-	pep8 --verbose --repeat --ignore W191,E501,E121 bin/*
+	python3 /usr/lib/python3/dist-packages/pep8.py \
+		--verbose --repeat --ignore W191,E501,E121 bin/*
 	dh_auto_build
 
 %:
-	dh $@ ${WITH_PYTHON2}
+	dh $@ --with python3 --buildsystem=pybuild
